--- a/node-temp-cerveceria/server/public/index.html
+++ b/node-temp-cerveceria/server/public/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Temperaturas</h1>
     <h2 id="temp"></h2>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
