--- a/node-temp-cerveceria/server/public/index.html
+++ b/node-temp-cerveceria/server/public/index.html
@@ -7,8 +7,10 @@
     <title>Cervecería</title>
 </head>
 <body>
-    <h1>Temperaturas</h1>
-    <h2 id="temp"></h2>
+   <div>
+      <h1>Temperatura Fermentaor 01</h1>
+      <p id="printdata"></p>
+   </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="main.js"></script>
 </body>
