--- a/node-temp-cerveceria/server/public/index.html
+++ b/node-temp-cerveceria/server/public/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
    <div>
-      <h1>Temperatura Fermentaor 01</h1>
+      <h1>Temperatura:</h1>
+      <h2>fermentador 01</h2>
       <p id="printdata"></p>
    </div>
     <script src="/socket.io/socket.io.js"></script>
