--- a/chartjs-node-temp/server/public/index.html
+++ b/chartjs-node-temp/server/public/index.html
@@ -21,7 +21,7 @@
    </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>   
-  <script src="/socket.io/socket.io.js"></script>  
+  <script src="https://cdn.socket.io/4.5.4/socket.io.min.js" integrity="sha384-/KNQL8Nu5gCHLqwqfQjA689Hhoqgi2S84SNUxC3roTe4EhJ9AfLkp8QiQcU8AMzI" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
 </html>
